--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "svginclude",
+  "name": "svgInclude",
   "version": "0.1.0",
   "authors": [
     {
@@ -7,7 +7,7 @@
       "email": "poupik@gmail.com"
     }
   ],
-  "main": ["dist/svginclude.js"],
+  "main": ["dist/svgInclude.js"],
   "ignore": [
     "src",
     "test",
